// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentActivity component should render 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4);
}

.emotion-8>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-8>* {
  min-width: 0;
}

.emotion-8:first-of-type {
  border-top: none;
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header wcpay-payment-activity__card__header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Your payment activity
        <div
          class="wcpay-filter components-custom-select-control"
        >
          <button
            aria-describedby="Currently selected: Last 7 days"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Period"
            class="components-button wcpay-filter components-custom-select-control__button"
            id="downshift-0-toggle-button"
            type="button"
          >
            <label
              class="wcpay-filter components-custom-select-control__label"
              for="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Period
            </label>
            <span
              class="wcpay-filter components-custom-select-control__button-value"
            >
              Last 7 days
            </span>
            <svg
              aria-hidden="true"
              class="wcpay-filter components-custom-select-control__button-icon"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
              />
            </svg>
          </button>
          <ul
            aria-hidden="true"
            aria-labelledby="downshift-0-label"
            class="wcpay-filter components-custom-select-control__menu"
            id="downshift-0-menu"
            role="listbox"
            tabindex="-1"
          />
        </div>
      </div>
      <div
        class="components-card__body components-card-body wcpay-payment-activity__card__body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="wcpay-payment-activity-data"
        >
          <div
            class="wcpay-payment-data-highlights__item"
          >
            <p
              class="wcpay-payment-data-highlights__item__label"
            >
              <span
                id="wcpay-payment-activity-data__total-payment-volume"
              >
                Total payment volume
              </span>
              <button
                class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
                type="button"
              >
                <div
                  class="wcpay-tooltip__content-wrapper"
                >
                  <div
                    aria-label="Total payment volume tooltip"
                    role="button"
                    tabindex="0"
                  >
                    <svg
                      class="gridicon gridicons-help-outline"
                      height="16"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </p>
            <div
              class="wcpay-payment-data-highlights__item__wrapper"
            >
              <p
                aria-labelledby="wcpay-payment-activity-data__total-payment-volume"
                class="wcpay-payment-data-highlights__item__wrapper__amount"
              >
                €1.234,56
              </p>
              <a
                data-link-type="wc-admin"
                href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&filter=advanced&store_currency_is=eur&date_between%5B0%5D=2024-01-01&date_between%5B1%5D=2024-01-31&type_is_in%5B0%5D=charge&type_is_in%5B1%5D=payment&type_is_in%5B2%5D=payment_failure_refund&type_is_in%5B3%5D=payment_refund&type_is_in%5B4%5D=refund&type_is_in%5B5%5D=refund_failure&type_is_in%5B6%5D=dispute&type_is_in%5B7%5D=dispute_reversal&type_is_in%5B8%5D=card_reader_fee&type_is_in%5B9%5D=adjustment"
              >
                View report
              </a>
            </div>
          </div>
          <div
            class="wcpay-payment-data-highlights"
          >
            <div
              class="wcpay-payment-data-highlights__item"
            >
              <p
                class="wcpay-payment-data-highlights__item__label"
              >
                <span
                  id="wcpay-payment-data-highlights__charges"
                >
                  Charges
                </span>
                <button
                  class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
                  type="button"
                >
                  <div
                    class="wcpay-tooltip__content-wrapper"
                  >
                    <div
                      aria-label="Charges tooltip"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        class="gridicon gridicons-help-outline"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </p>
              <div
                class="wcpay-payment-data-highlights__item__wrapper"
              >
                <p
                  aria-labelledby="wcpay-payment-data-highlights__charges"
                  class="wcpay-payment-data-highlights__item__wrapper__amount"
                >
                  €98,76
                </p>
                <a
                  data-link-type="wc-admin"
                  href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&filter=advanced&store_currency_is=eur&date_between%5B0%5D=2024-01-01&date_between%5B1%5D=2024-01-31&type_is_in%5B0%5D=charge&type_is_in%5B1%5D=payment&type_is_in%5B2%5D=adjustment"
                >
                  View report
                </a>
              </div>
            </div>
            <div
              class="wcpay-payment-data-highlights__item"
            >
              <p
                class="wcpay-payment-data-highlights__item__label"
              >
                <span
                  id="wcpay-payment-data-highlights__refunds"
                >
                  Refunds
                </span>
              </p>
              <div
                class="wcpay-payment-data-highlights__item__wrapper"
              >
                <p
                  aria-labelledby="wcpay-payment-data-highlights__refunds"
                  class="wcpay-payment-data-highlights__item__wrapper__amount"
                >
                  €44,44
                </p>
                <a
                  data-link-type="wc-admin"
                  href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&filter=advanced&store_currency_is=eur&date_between%5B0%5D=2024-01-01&date_between%5B1%5D=2024-01-31&type_is_in%5B0%5D=refund&type_is_in%5B1%5D=refund_failure&type_is_in%5B2%5D=payment_refund&type_is_in%5B3%5D=payment_failure_refund"
                >
                  View report
                </a>
              </div>
            </div>
            <div
              class="wcpay-payment-data-highlights__item"
            >
              <p
                class="wcpay-payment-data-highlights__item__label"
              >
                <span
                  id="wcpay-payment-data-highlights__disputes"
                >
                  Disputes
                </span>
                <button
                  class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
                  type="button"
                >
                  <div
                    class="wcpay-tooltip__content-wrapper"
                  >
                    <div
                      aria-label="Disputes tooltip"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        class="gridicon gridicons-help-outline"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </p>
              <div
                class="wcpay-payment-data-highlights__item__wrapper"
              >
                <p
                  aria-labelledby="wcpay-payment-data-highlights__disputes"
                  class="wcpay-payment-data-highlights__item__wrapper__amount"
                >
                  €55,55
                </p>
                <a
                  data-link-type="wc-admin"
                  href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions&filter=advanced&store_currency_is=eur&date_between%5B0%5D=2024-01-01&date_between%5B1%5D=2024-01-31&type_is_in%5B0%5D=dispute&type_is_in%5B1%5D=dispute_reversal"
                >
                  View report
                </a>
              </div>
            </div>
            <div
              class="wcpay-payment-data-highlights__item"
            >
              <p
                class="wcpay-payment-data-highlights__item__label"
              >
                <span
                  id="wcpay-payment-data-highlights__fees"
                >
                  Fees
                </span>
                <button
                  class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
                  type="button"
                >
                  <div
                    class="wcpay-tooltip__content-wrapper"
                  >
                    <div
                      aria-label="Fees tooltip"
                      role="button"
                      tabindex="0"
                    >
                      <svg
                        class="gridicon gridicons-help-outline"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </p>
              <div
                class="wcpay-payment-data-highlights__item__wrapper"
              >
                <p
                  aria-labelledby="wcpay-payment-data-highlights__fees"
                  class="wcpay-payment-data-highlights__item__wrapper__amount"
                >
                  €12,34
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="components-flex components-card__footer components-card-footer emotion-8 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
      >
        <div
          class="wcpay-payments-activity__survey"
        >
          <div
            class="survey_container"
          >
            Are these metrics helpful?
            <div
              class="survey_container__emoticons"
            >
              <button
                class="components-button has-icon"
                type="button"
              >
                <span
                  aria-label="very-unhappy"
                  role="img"
                >
                  😞
                </span>
              </button>
              <button
                class="components-button has-icon"
                type="button"
              >
                <span
                  aria-label="unhappy"
                  role="img"
                >
                  🫤
                </span>
              </button>
              <button
                class="components-button has-icon"
                type="button"
              >
                <span
                  aria-label="neutral"
                  role="img"
                >
                  😑
                </span>
              </button>
              <button
                class="components-button has-icon"
                type="button"
              >
                <span
                  aria-label="happy"
                  role="img"
                >
                  🙂
                </span>
              </button>
              <button
                class="components-button has-icon"
                type="button"
              >
                <span
                  aria-label="very-happy"
                  role="img"
                >
                  😍
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-10 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`PaymentActivity component should render an empty state 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-6:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-6:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-8 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-8 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class="components-surface components-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-flex components-card__header components-card-header emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Your payment activity
      </div>
      <div
        class="components-card__body components-card-body wcpay-payment-activity__card__body emotion-6 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="wcpay-payment-activity__card__body__empty-state-wrapper"
        >
          <img
            alt=""
            src="assets/images/payment-activity-empty-state.svg"
          />
          <p>
            <strong>
              No payments…yet!
            </strong>
          </p>
          <p>
            Once your first order comes in, you'll start seeing your payment activity right here.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-8 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
